--- a/sample.yaml
+++ b/sample.yaml
@@ -12,8 +12,9 @@ tests:
       - nrf52833dk/nrf52833
       - nrf52840dk/nrf52840
       - nrf5340dk/nrf5340/cpuapp
+      - nrf52840dongle/nrf52840
     platform_allow: >
-      nrf52dk/nrf52832 nrf52833dk/nrf52833 nrf52840dk/nrf52840 nrf5340dk/nrf5340/cpuapp
+      nrf52dk/nrf52832 nrf52833dk/nrf52833 nrf52840dk/nrf52840 nrf5340dk/nrf5340/cpuapp nrf52840dongle/nrf52840
     tags: bluetooth ci_build sysbuild
   sample.bluetooth.nrf_dm.timeslot.high_precision:
     sysbuild: true
@@ -24,5 +25,6 @@ tests:
       - nrf52833dk/nrf52833
       - nrf52840dk/nrf52840
       - nrf5340dk/nrf5340/cpuapp
-    platform_allow: nrf52833dk/nrf52833 nrf52840dk/nrf52840 nrf5340dk/nrf5340/cpuapp
+      - nrf52840dongle/nrf52840
+    platform_allow: nrf52833dk/nrf52833 nrf52840dk/nrf52840 nrf5340dk/nrf5340/cpuapp nrf52840dongle/nrf52840
     tags: bluetooth ci_build sysbuild
