--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,4 +17,11 @@ target_sources(app PRIVATE
   )
 # NORDIC SDK APP END
 
+add_custom_target(ensure_merged_hex ALL
+    COMMAND ${CMAKE_COMMAND} -E touch ${CMAKE_BINARY_DIR}/merged.hex
+)
+
+message(STATUS "Kernel Hex File Name: ${BYPRODUCT_KERNEL_HEX_NAME}")
+message(STATUS "Merged Hex File Name: ${CMAKE_BINARY_DIR}/merged.hex")
+
 zephyr_library_include_directories(${CMAKE_CURRENT_SOURCE_DIR})
