--- a/prj.conf
+++ b/prj.conf
@@ -19,7 +19,7 @@ CONFIG_BT_ID_MAX=1
 
 CONFIG_BT_EXT_ADV=y
 
-CONFIG_BT_DEVICE_NAME="nRF_DM"
+CONFIG_BT_DEVICE_NAME="CM_DM"
 CONFIG_BT_DDFS=y
 
 # Distance Measurement
